--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,41 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
+  <ion-toolbar color="secondary shade">
+    <ion-title class="header">
+      Sobre
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item lines="full">
+    <ion-avatar slot="end">
+      <img src="assets/desenvolvedor.jpg">
+    </ion-avatar>
+    <ion-label class="ion-text-wrap">
+      <div>
+        <h3 class="nome">João Vitor Gomes Pontes</h3>
+        <p>Aluno da Etec Cidade do Livro</p>
+        <p>Lençóis Paulista</p>
+        <p>(14) 9 9188-1413</p>
+        <p>
+          <a href="mailto:joao.pontes29@etec.sp.gov.br">joao.pontes29@etec.sp.gov.br</a>
+        </p>
+      </div>
+    </ion-label>
+  </ion-item >
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-item lines="full">
+   <ion-label>Versão</ion-label>
+   <ion-badge slot="end" color="tertiary">0.1</ion-badge>
+  </ion-item>
+
+  <ion-item lines="full">
+    <ion-label>Ano</ion-label>
+    <ion-badge slot="end" color="danger">2021</ion-badge>
+   </ion-item>
+
+   <ion-item lines="full">
+    <ion-label>Turma</ion-label>
+    <ion-badge slot="end" color="success">A</ion-badge>
+   </ion-item>
 </ion-content>
