--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,17 +2,17 @@
 
   <ion-tab-bar color="secondary shade" slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="film"></ion-icon>
+      <ion-icon color="dark" name="film"></ion-icon>
       <ion-label class="titulo">Filmes</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="layers"></ion-icon>
-      <ion-label class="titulo">Series</ion-label>
+      <ion-icon color="dark" name="layers"></ion-icon>
+      <ion-label class="titulo">Séries</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="person-circle"></ion-icon>
+      <ion-icon color="dark" name="person-circle"></ion-icon>
       <ion-label class="titulo">Sobre</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
