--- a/src/app/filmes/patrulhacanina-ofilme/patrulhacanina-ofilme.page.html
+++ b/src/app/filmes/patrulhacanina-ofilme/patrulhacanina-ofilme.page.html
@@ -17,7 +17,7 @@
         <ion-col size="8"><ion-card-title class="titulo">Patrulha Canina: O Filme (2021)</ion-card-title></ion-col>
 
         <ion-col size="4">
-         <ion-chip class="nota" color="success" outline>
+         <ion-chip class="nota" color="secondary" outline>
            <ion-label>83%</ion-label>
          </ion-chip>
         </ion-col>
