--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -26,11 +26,13 @@ margin-right: 0.3rem;
 }
 
 .nota{
- border-style:solid;
- border-radius: 2rem;
- padding-inline:0.5rem;
- height:3rem;
- width:3rem;
+ border:solid;
+ border-radius: 3rem;
+ padding-inline: 0.5rem;
+ height:3.5rem;
+ width:3.5rem;
+ font-weight: bold;
+ font-size:1rem;
 }
 
 .barra{
