--- a/src/app/filmes/cargaexplosivatres/cargaexplosivatres.page.html
+++ b/src/app/filmes/cargaexplosivatres/cargaexplosivatres.page.html
@@ -17,7 +17,7 @@
         <ion-col size="8"><ion-card-title class="titulo">Carga Explosiva 3 (2008)</ion-card-title></ion-col>
 
         <ion-col size="4">
-         <ion-chip class="nota" color="success" outline>
+         <ion-chip class="nota" color="secondary" outline>
            <ion-label>61%</ion-label>
          </ion-chip>
         </ion-col>
