--- a/src/app/filmes/gijoeorigens/gijoeorigens.page.html
+++ b/src/app/filmes/gijoeorigens/gijoeorigens.page.html
@@ -17,7 +17,7 @@
         <ion-col size="8"><ion-card-title class="titulo">G.I. Joe Origens: Snake Eyes (2021)</ion-card-title></ion-col>
 
         <ion-col size="4">
-         <ion-chip class="nota" color="success" outline>
+         <ion-chip class="nota" color="secondary" outline>
            <ion-label>71%</ion-label>
          </ion-chip>
         </ion-col>
