--- a/src/app/filmes/gijoeorigens/gijoeorigens.page.scss
+++ b/src/app/filmes/gijoeorigens/gijoeorigens.page.scss
@@ -12,3 +12,13 @@
     font-weight: bold;
     font-size:1.2rem;
   }
+
+  .nota{
+    border:solid;
+    border-radius: 3rem;
+    padding-inline: 0.5rem;
+    height:3.5rem;
+    width:3.5rem;
+    font-weight: bold;
+    font-size:1rem;
+   }
