--- a/src/app/filmes/samuraix-aorigem/samuraix-aorigem.page.html
+++ b/src/app/filmes/samuraix-aorigem/samuraix-aorigem.page.html
@@ -17,7 +17,7 @@
         <ion-col size="8"><ion-card-title class="titulo">Samurai X: A Origem (2021)</ion-card-title></ion-col>
 
         <ion-col size="4">
-         <ion-chip class="nota" color="success" outline>
+         <ion-chip class="nota" color="secondary" outline>
            <ion-label>78%</ion-label>
          </ion-chip>
         </ion-col>
