--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,5 +7,17 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <app-explore-container name="Coming Soon"></app-explore-container>
+   <!-- Sliding item with text options on both sides -->
+   <ion-item-sliding>
+
+    <ion-item>
+      <ion-label>Item Options</ion-label>
+    </ion-item>
+
+    <ion-item-options side="end">
+      <ion-item-option color="success">
+        <ion-icon (click)="presentAlert()" (click)="presentToast()" slot="icon-only" name="star"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
 </ion-content>
